--- a/multimodal/websites/tarko/docs/zh/guide/advanced/agent-snapshot.mdx
+++ b/multimodal/websites/tarko/docs/zh/guide/advanced/agent-snapshot.mdx
@@ -248,3 +248,77 @@ agent.setLogLevel('debug');
 // 带调试回放
 const response = await agent.chat('从这里继续');
 ```
+
+## 真实调试案例
+
+### 模型提供商兼容性问题
+
+Agent Snapshot 在调试模型提供商兼容性问题时特别有用。以下是 Agent TARS 开发中的真实案例：
+
+**问题**：AWS Bedrock 兼容性错误
+
+```
+[Stream] Error in agent loop execution: Error: 400 operation error Bedrock Runtime: ConverseStream, https response error StatusCode: 400, RequestID: 31427985-ebcf-4321-af29-d498c474a20f, ValidationException: The json schema definition at toolConfig.tools.13.toolSpec.inputSchema is invalid. Fix the following errors and try again: $.properties: null found, object expected
+```
+
+**解决过程**：
+
+1. **在 Agent TARS 中启用快照**：
+
+```typescript
+// agent-tars.config.ts
+import { resolve } from 'node:path';
+import { defineConfig } from '@agent-tars/interface';
+
+export default defineConfig({
+  // ...
+  snapshot: {
+    enable: true,
+    storageDirectory: resolve(__dirname, 'snapshots')
+  }
+});
+```
+
+2. **分析快照结构**：
+
+快照生成详细的目录结构：
+
+```bash
+snapshots
+└── c3fMyx8jePXnhjYvHOhKr           # Session id
+    ├── event-stream.jsonl          # Final event stream
+    ├── loop-1                      # Loop 1
+    │   ├── event-stream.jsonl
+    │   ├── llm-request.jsonl
+    │   ├── llm-response.jsonl
+    │   └── tool-calls.jsonl
+    ├── loop-2                      # Loop 2
+    │   ├── event-stream.jsonl
+    │   ├── llm-request.jsonl
+    │   ├── llm-response.jsonl
+    │   └── tool-calls.jsonl
+    └── loop-3                      # Loop 3
+        ├── event-stream.jsonl
+        ├── llm-request.jsonl
+        └── llm-response.jsonl
+```
+
+3. **根因分析**：
+
+通过检查 `loop-1/llm-request.jsonl`，我们发现 AWS Bedrock 要求 JSON Schema 中当 `type` 为 "object" 时必须包含 `properties` 字段，即使为空。
+
+4. **修复实现**：
+
+```diff
+"type": "function",
+"function": {
+    "name": "browser_get_clickable_elements",
+    "description": "[browser] Get the clickable or hoverable or selectable elements on the current page, don't call this tool multiple times",
+    "parameters": {
+        "type": "object",
++       "properties": {}
+    }
+}
+```
+
+这个真实案例展示了 Agent Snapshot 如何实现 "白盒" 调试，使复杂的 Agent 系统更加透明和可调试。完整修复请参见 [bytedance/UI-TARS-desktop#770](https://github.com/bytedance/UI-TARS-desktop/pull/770)。
